Changed pictures to load to 66.7% width instead of 961px

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,4 @@
 
 <div class="large-img-container">
-	<%= image_tag "sf.jpg", width: '960' %>
+	<%= image_tag "stars.jpeg", width: '66.7%' %>
 </div>
