--- a/app/views/static_pages/store.html.erb
+++ b/app/views/static_pages/store.html.erb
@@ -1,4 +1,4 @@
 
 <div class="large-img-container">
-	<%= image_tag "pink_flowers.jpg", width: '960' %>
+	<%= image_tag "pink_flowers.jpg", width: '66.7%' %>
 </div>
