Add about page content, add placeholder for store and blog, change title font to raleway, text font to karla

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,24 @@
+<div class="med-img-container">
+	<%= image_tag "donut-engagement.jpg", width: "100%"%>
+</div>
 
-<div class="large-img-container">
-	<%= image_tag "stars.jpeg", width: '66.7%' %>
+
+<div class="centered-text">
+	<h2>about blackbird spaces</h2>
+	<p>
+	I am an adopted daughter of God, undeservingly saved by grace, and eternally 
+	thankful for this! My life’s ambition is to bring glory to my Savior and King
+	– to be a living sacrifice pleasing unto Him. It is truly incredible to know 
+	because of His great love for us, and His drawing me near to Him, that I can 
+	boast not anything of myself, but the fact that I know Him and was given eyes 
+	to see and ears to hear!
+	</p>
+	<p>
+	I am an individual created in His image, given a purpose of first and greatest 
+	importance living a life of joyful obedience to Christ – my life was paid for, 
+	and I belong to Him first and foremost. Several interests He gave me are in 
+	fashion, design, styling, analyzing trends, writing, baking, cooking when I 
+	have all the ingredients, and reading – among others. I pray that He will be 
+	honored in all that I do.
+	</p>
 </div>
