--- a/app/views/static_pages/blog.html.erb
+++ b/app/views/static_pages/blog.html.erb
@@ -1,4 +1,1 @@
-
-<div class="large-img-container">
-	<%= image_tag "washington_wildflowers.jpg", width: '66.7%' %>
-</div>
+<h1 class="placeholder">Coming Soon!</h1>
