--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,7 +1,8 @@
 
 // Variables
 
-$light-black: #242021;
+//$light-black: #242021;
+$light-black: #423a33;
 //$gold: #d5af2f;
 $gold: #e69c39;
 $gray: #a4a4a4;
@@ -14,15 +15,22 @@ $gray: #a4a4a4;
 	padding: 0;
 }
 
+body {
+	position: relative;
+}
+
+
 a {
 	text-decoration: none;
 }
 
 .header {
 	margin: 140px 0 40px 0;
+	position: relative;
 
 	h1 {
 		text-align: center;
+		position: relative;
 		font-family: matchmaker;
 		font-size: 2em;
 		color: $light-black;
@@ -57,7 +65,7 @@ h1 {
 		margin-bottom: 30px;
 
 		li {
-			margin: 0 3%;
+			margin: 0 2%;
 			display: inline-block;
 			font-family: raleway;
 			font-size: 1em;
@@ -85,8 +93,44 @@ h1 {
 
 .large-img-container {
 	width: 100%;
-	margin: 0 auto;
 	text-align: center;
 	margin: 50px 0 100px 0;
+}
+
+.med-img-container {
+	position: relative;
+	width: 37%;
+	margin: 80px auto 50px auto;
+}
+
+
+.centered-text {
+	color: $light-black;
+	margin: 80px auto 0 auto;
+	width: 30%;
+
+	h2 {
+		font-family: raleway;
+		text-align: center;
+		margin-bottom: 30px;
+	}
+
+	p {
+		font-family: karla;
+		text-align: justify;
+		font-size: .9em;
+		margin: 0 auto 20px auto;
+		line-height: 1.3;
+	}
+}
+
+
+
+
+.placeholder {
+	position: relative;
+	font-family: raleway;
+	top: 100px;
+	color: $light-black;
 }
 
