--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
 		<ul>
 			<%= nav_link_to "home", root_path, {}, wrapper: 'li' %>
 			<%= nav_link_to "store", store_path, {}, wrapper: 'li' %>
-			<%= nav_link_to "punderings", blog_path, {}, wrapper: 'li' %>
+			<%= nav_link_to "blog", blog_path, {}, wrapper: 'li' %>
 			<%= nav_link_to "about", about_path, {}, wrapper: 'li' %>
 		</ul>
 	</div>
