Add initial footer

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -6,6 +6,7 @@ $light-black: #423a33;
 //$gold: #d5af2f;
 $gold: #e69c39;
 $gray: #a4a4a4;
+$light-gray: #f9fafb;
 
 
 // Content
@@ -19,6 +20,12 @@ body {
 	position: relative;
 }
 
+#main-content {
+	position: relative;
+	width: 960px;
+	padding: 35px 0;
+	margin: 0 auto;
+}
 
 a {
 	text-decoration: none;
@@ -54,7 +61,6 @@ h1 {
 
 #main-nav {
 
-	margin-bottom: 30px;
 	border-bottom: solid 1px #c7c7c7;
 
 	ul {
@@ -92,22 +98,23 @@ h1 {
 
 
 .large-img-container {
+	position: relative;
 	width: 100%;
 	text-align: center;
-	margin: 50px 0 100px 0;
+	margin: 0 0 100px 0;
 }
 
 .med-img-container {
 	position: relative;
-	width: 37%;
-	margin: 80px auto 50px auto;
+	width: 60%;
+	margin: 0 auto 50px auto;
 }
 
 
 .centered-text {
 	color: $light-black;
 	margin: 80px auto 0 auto;
-	width: 30%;
+	width: 50%;
 
 	h2 {
 		font-family: raleway;
@@ -116,7 +123,7 @@ h1 {
 	}
 
 	p {
-		font-family: karla;
+		font-family: proxima-nova;
 		text-align: justify;
 		font-size: .9em;
 		margin: 0 auto 20px auto;
@@ -130,7 +137,33 @@ h1 {
 .placeholder {
 	position: relative;
 	font-family: raleway;
-	top: 100px;
+	margin-top: 100px;
 	color: $light-black;
 }
 
+footer {
+	position: absolute;
+	width: 100%;
+	height: 60px;
+	background-color: $light-gray;
+	padding: 30px 0;
+	margin-top: 50px;
+	font-size: 14px;
+	font-family: raleway;
+	color: $gray;
+	text-align: right;
+
+	#footer-links {
+		margin: 20px 250px 0 0;
+
+		a, a:visited {
+			color: $gray;
+			transition: all .4s;
+		}
+
+		a:hover {
+			color: $light-black;
+		}
+	}
+
+}
