--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,4 @@
 <div class="large-img-container">
-	<%= image_tag "Z&J.jpg", width: '66.7%' %>
-	
+	<%= image_tag "Z&J.jpg", width: '961' %>
 </div>
 
