Add tentative cute logo

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
 <body>
 	<div id="whole-page">
 		<div class="header">
+			<div id="logo">
+				<%= image_tag "BlackbirdSpacesLogoCute.png" %>
+			</div>
+			
 			<%= link_to root_path do %>
 				<h1><span class="swash">P</span>blackbird spaces<span class="swash">O</span></h1>
 			<% end %>
