--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -6,7 +6,7 @@ $light-black: #423a33;
 //$gold: #d5af2f;
 $gold: #e69c39;
 $gray: #a4a4a4;
-$light-gray: #f9fafb;
+$light-gray: #f5f5f5;
 
 
 // Content
@@ -16,14 +16,20 @@ $light-gray: #f9fafb;
 	padding: 0;
 }
 
+html {
+	height: 100%;
+}
+
 body {
 	position: relative;
+	height: 100%;
 }
 
 #main-content {
 	position: relative;
 	width: 960px;
 	padding: 35px 0;
+	padding-bottom: 60px;
 	margin: 0 auto;
 }
 
@@ -45,7 +51,7 @@ a {
 }
 
 #logo {
-	margin: 0 auto 50px auto;
+	margin: 0 auto 30px auto;
 	width: 104px;
 }
 
