--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -28,6 +28,7 @@ body {
 #main-content {
 	position: relative;
 	width: 960px;
+	min-height: 400px;
 	padding: 35px 0;
 	padding-bottom: 60px;
 	margin: 0 auto;
