--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,9 @@
 
 		<footer>
 			<div id="footer-links">
+				<%= link_to "Etsy", "https://www.etsy.com/shop/blackbirdspaces?ref=l2-shopheader-name",
+				 	target: "_blank" %>
+				<span> | </span>
 				<%= link_to "Instagram", "https://instagram.com/blackbirdspaces/", target: "_blank" %>
 				<span> | </span>
 				<%= link_to "Facebook", "https://www.facebook.com/helloblackbirdspaces?fref=ts",
