Make logo width a percentage instead of px

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -57,8 +57,10 @@ a {
 }
 
 #logo {
+	position: relative;
+	text-align: center;
 	margin: 0 auto 30px auto;
-	width: 104px;
+	width: 27%;
 }
 
 h1 {
