--- a/app/assets/stylesheets/fonts.css.scss
+++ b/app/assets/stylesheets/fonts.css.scss
@@ -1,4 +1,9 @@
 @font-face {
+	font-family: 'avenir';
+	src: font-url('Avenir LT 65 Medium.ttf');
+}
+
+@font-face {
 	font-family: 'bebas';
 	src: font-url('bebas/bebas-neue-regular.otf');
 }
