--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Blackbird Spaces</title>
-	<%= favicon_link_tag 			 "BlackbirdSpacesLogoAlt1Background.png" %>
+	<%= favicon_link_tag 			 "BlackbirdSpacesLogo2.png" %>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
