Try fixing compile error, move font faces to custom.css.scss and delete fonts file

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,4 +1,54 @@
 
+@font-face {
+	font-family: 'avenir';
+	src: font-url('Avenir LT 65 Medium.ttf');
+}
+
+@font-face {
+	font-family: 'bebas';
+	src: font-url('bebas/bebas-neue-regular.otf');
+}
+
+@font-face {
+	font-family: 'karla';
+	src: font-url('karla/Karla-Regular.ttf');
+}
+
+@font-face {
+	font-family: 'matchmaker';
+	src: font-url('MATCHMAKER/Matchmaker-Regular.ttf');
+}
+
+@font-face {
+	font-family: 'matchmaker-swash';
+	src: font-url('MATCHMAKER/MatchmakerSwashes-Regular.ttf');
+}
+
+@font-face {
+	font-family: 'mensch';
+	src: font-url('Mensch/mensch.ttf');
+}
+
+@font-face {
+	font-family: 'merriweather';
+	src: font-url('merriweather/Merriweather-Regular.otf');
+}
+
+@font-face {
+	font-family: 'merriweather-sans';
+	src: font-url('merriweather-sans/MerriweatherSans-Regular.otf');
+}
+
+@font-face {
+	font-family: 'mojave';
+	src: font-url('Mohave/Mohave.otf');
+}
+
+@font-face {
+	font-family: 'proxima-nova';
+	src: font-url('proxima-nova-regular.otf');
+}
+
 // Variables
 
 //$light-black: #242021;
