--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,7 +1,7 @@
 
 @font-face {
 	font-family: 'avenir';
-	src: font-url('Avenir LT 65 Medium.ttf');
+	src: font-url('Avenir-LT-65-Medium.ttf');
 }
 
 @font-face {
