--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,8 @@
 </head>
 <body>
 	<div id="whole-page">
-		<div class="header">
-			<div id="header-content">
+		<div id="header-container">
+			<div class="header">
 					<div id="logo">
 						<%= link_to root_path do %>
 							<%= image_tag "BlackbirdSpacesLogo2.png" %>
