--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,14 +1,18 @@
-<div class="placeholder">
 	<h1>Create Post</h1>
-	<div class="form">
-		<%= form_for [@post] do |f| %>
-			<%= f.label :title %>
-			<%= f.text_field :title %>
+	<div class="form-container">
+		<div class="newedit-postform">
+			<%= form_for [@post] do |f| %>
+				<div class="newedit-title">
+					<%= f.label :title %>
+					<%= f.text_field :title %>
+				</div>
 
-			<%= f.label :body %>
-			<%= f.text_area :body %>
+				<div class="newedit-body">
+					<%= f.label :body %>
+					<%= f.text_area :body %>
+				</div>
 
-			<%= submit_tag "Submit" %>
-		<% end %>
+				<%= submit_tag "Submit", html: { class: "button" } %>
+			<% end %>
+		</div>
 	</div>
-</div>
