--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,16 +1,23 @@
-<div class="placeholder">
-	<h1>Posts Index</h1>
-	<p>Find me in app/views/posts/index.html.erb</p>
-	<div id="posts-all">
-		<ul>
-			<% Post.all.each do |post| %>
-				<li>
-					<div class="post-preview">
-						<h2><%= post.title %></h2>
+<!--
+<h1>Posts Index</h1>
+-->
+<div id="posts-all">
+	<ul>
+		<% @posts.each do |post| %>
+			<li>
+				<div class="post-preview">
+					<h2>
+						<%= link_to post do %>
+							<%= post.title %>
+						<% end %>
+					</h2>
+					<div class="post-preview-table">
+						<%= image_tag "wetyourwhiskersbanner.jpg", height: "250" %>
 						<p><%= post.body %></p>
 					</div>
-				</li>
-			<% end %>
-		</ul>
-	</div>
+				</div>
+			</li>
+		<% end %>
+	</ul>
+	<%= will_paginate @posts %>
 </div>
